Ensure that DownloadManagerTabHelper has a delegate.

DownloadManagerTabHelper does not work without delegate, so make sure
that DownloadManagerCoordinator is created before
DownloadManagerTabHelper.

Previously DownloadManagerCoordinator was created in viewDidLoad which
is called after all Tab Helpers are attached to the restored tabs.

Bug: 832210
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Id5bcbec42b0723007aef4d8a25a065cb30238484
Reviewed-on: https://chromium-review.googlesource.com/1011182
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Commit-Queue: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550731}
Former-commit-id: 464ebff95463a4d94cb1137b102d8eb0411ed14c